@@ -1,5 +1,11 @@
 === HEAD
 
+* New Features
+
+  * Builder changes scope based on block arity
+
+=== HEAD
+
 * Bugfixes
 
   * Fixing bug where a node is passed in to Node#new
